@@ -1,3 +1,7 @@
+2007-03-23  John W. Eaton  <jwe@octave.org>
+
+	* bitfcns.cc (Fbitshift): Error if third argument is not a scalar.
+
 2007-03-23  David Bateman  <dbateman@free.fr>
 
 	* DLD-FUNCTIONS/rand.cc: Make statistical tests optional and 
